--- a/BBB.ipynb
+++ b/BBB.ipynb
@@ -74,7 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = '../input/"
+    "from google.colab import drive\n",
+    "drive.mount(\"/content/drive\")"
    ]
   }
  ],
